# Leetcode-Runner

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dockerfile  pyproject.toml  runner.yaml  script.sh
analytics/: aggregator.py  benchmark.py  metrics.py
backends/: __init__.py  base_backend.py  benchmark.py  docker.py  docker_backend.py  registry.py  subprocess.py  subprocess_backend.py
contracts/: backend.py  middleware.py  reporter.py  subscriber.py
docs/: architecture.md  class_diagram.mmd  componment_diagram.mmd  note.html  note.md  project_structure.txt  sequence_diagram.mmd  v2-layered-architecture.md  v3-execution-backend.md  v3.1-result-model.md  v3.2-execution-platform.md  v3.4-test-infrastructure.md  v4.0-artifact-management.md  v4.1-event-logging.md  v4.3-observability.md  v4.8-workflow-pipeline.md  v4.9-workflow-context.md
events/: builder.py  bus.py  event.py  registry.py
factories/: builder.py  request_factory.py
infra/: event_logger.py  logger.py  parallel.py
middleware/: __init__.py  base.py  benchmark.py  pipeline.py  registry.py  retry.py  timeout.py
models/: execution_request.py
plugins/: registry.py
reporters/: __init__.py  base.py  composite.py  console.py  console_reporter.py  file_reporter.py  formatter.py  json_reporter.py  logger.py  logger_reporter.py  printer.py  registry.py  storage.py
runner/: __init__.py  aggregator.py  analytics.py  backends.py  builder.py  cli.py  config.py  core.py  discovery.py  engine.py  executor.py  interfaces.py  logger.py  models.py  report.py  request_factory.py  runner_config.py  (+2 more)
(+48 files in other folders)
