[tool.poetry]
name = "leetcode-runner"
version = "0.1.0"
description = ""
authors = ["Andrew Wang <andew771027@gmail.com>"]
readme = "README.md"
packages = [
    {include = "runner"},
    {include = "backends"},
    {include = "analytics"},
    {include = "models"},
    {include = "reporters"}
]

[tool.poetry.dependencies]
python = ">=3.14"
pre-commit = ">=4.6.0,<5.0.0"
typer = ">=0.25.1,<0.26.0"
yyaml = "^0.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
